--- a/library.properties
+++ b/library.properties
@@ -7,3 +7,4 @@ paragraph=Flash Updater for smart D-LED board
 category=Other
 url=https://github.com/DylanMeng/Smart-D-LED-LIB_SerialFlashUpdater
 architectures=samd
+includes=SerialFlashUpdater.h
